--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
@@ -1,29 +1,83 @@
 ﻿@model Courses
-
+@{
+    IList<Teachers> teachers = ViewBag.teachers;
+}
 
 <div class="modal  coursemodal" id="addCourse">
     <div class="modal-dialog">
-        <form asp-action="CreateSubjectPost">
+        <form asp-action="CreateCoursePost" onsubmit="return ajaxpostBasic(this);">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="addSubjectLabel">Kurzus hozzáadása</h4>
+                    <h4 class="modal-title" id="addCourseLabel">Kurzus hozzáadása</h4>
                     <button type="button" class="close" data-dismiss="modal"><span>X</span></button>
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        @*<input type="hidden" asp-for="CourseType" class="form-control" value="" />*@
+                        <input type="hidden" asp-for="SubjectId" class="form-control" value="@Model.SubjectId" />
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="NeptunOk">Neptunba beírva?</label>
+                        <input asp-for="NeptunOk" class="form-control" />
+                        <span asp-validation-for="NeptunOk" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label asp-for="CourseType">Kurzus típus</label>
                         <input asp-for="CourseType" class="form-control" />
                         <span asp-validation-for="CourseType" class="text-danger"></span>
                     </div>
+                    <div class="form-group">
+                        <label asp-for="Hours">Óraszám</label>
+                        <input asp-for="Hours" class="form-control" />
+                        <span asp-validation-for="Hours" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="CourseCode">Kurzus kód</label>
+                        <input asp-for="CourseCode" class="form-control" />
+                        <span asp-validation-for="CourseCode" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Members">Létszám</label>
+                        <input asp-for="Members" class="form-control" />
+                        <span asp-validation-for="Members" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Classroom">Terem</label>
+                        <input asp-for="Classroom" class="form-control" />
+                        <span asp-validation-for="Classroom" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Software">Szoftver</label>
+                        <input asp-for="Software" class="form-control" />
+                        <span asp-validation-for="Software  " class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Comment">Komment</label>
+                        <input asp-for="Comment" class="form-control" />
+                        <span asp-validation-for="Comment  " class="text-danger"></span>
+                    </div>
+                    <div class="teacherSelect">   
+                        <div class="form-group TeacherClass">
+                            <label>Oktató</label>
+                            <select class="custom-select" name="Teachers">
+                                @foreach (var item in teachers)
+                                {
+                                    <option value="@item.TeacherId">@item.Name</option>
+
+                                }
+                            </select>
+                            <label>Terhelés</label>
+                            <input type="number" name="Loads" min="1" max="100" class="form-control" />
+                        </div>
+                    </div>
+                    <div class="teacherMoreSelect" id="moreTeacher">
+
+                    </div>
+                    <button type="button" class="btn btn-secondary" onclick = "addTeacherSelect();">Új tanár hozzáadása</button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Bezárás</button>
                     <div class="form-group">
-                        <input type="submit" value="Mentés" class="btn btn-primary" data-toggle="course-modal" data-target="#addSubject" data-url="@Url.Action("CreateSubject")" />
-
+                        <input type="submit" value="Mentés és tovább" class="btn btn-primary" />
                     </div>
                 </div>
             </div>
