--- a/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_CourseModalPartial.cshtml
@@ -66,7 +66,7 @@
                                 }
                             </select>
                             <label>Terhelés</label>
-                            <input type="number" name="Loads" min="1" max="100" class="form-control" />
+                            <input type="number" name="LoadList" min="1" max="100" class="form-control" />
                         </div>
                     </div>
                     <div class="teacherMoreSelect" id="moreTeacher">
