Delete modals and removed permissions from user

--- a/Kurzusok/Kurzusok/wwwroot/css/sidebar.css
+++ b/Kurzusok/Kurzusok/wwwroot/css/sidebar.css
@@ -22,7 +22,7 @@
     display: none;
 }
 
-    #opened > height, #closed > * {
+    #opened > .height, #closed > * {
         height: 40px;
         line-height: 40px;
     }
