--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -459,58 +459,76 @@
 </div>
 
 @section SideBar{
-    <div class="sidebar" id="SideBar" onmouseover="openBar()" onmouseout="delay()">
-        <ul class="nav nav-sidebar justify-content-center" id="opened">
-            <li class="nav-item pb-1 height">
-                <form class="navbar-form d-flex" asp-area="" asp-controller="Home" asp-action="SearchResult">
-                    <input type="text" name="SearchPhrase" class="form-control" placeholder="Keresés">
-                </form>
-            </li>
-            <li class="nav-item pb-1 height">
-                <a class="nav-link text-dark dropdown-toggle pl-1 py-0 d-inline" id="dropdownMenu1" data-toggle="dropdown">
-                    @date
-                </a>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" role="menu">
-                    @foreach (var item in Model.SemestersList)
-                    {
-                        if (date != item.Date)
-                        {
-                            <a class="text-dark nav-link" role="menuitem" tabindex="-1" asp-route-currentSemesterId="@item.Id">@item.Date</a>
-                        }
-                    }
-                </div>
-            </li>
-            @if (User.IsInRole("Admin"))
-            {
+    <form asp-area="" asp-controller="Home" asp-action="AnySearch" id="anysearchform"> </form>
+        <div class="sidebar" id="SideBar" onmouseover="openBar()" onmouseout="delay()">
+            <ul class="nav nav-sidebar justify-content-center" id="opened">
                 <li class="nav-item pb-1 height">
-                    <form method="post" class="navbar-form d-flex" asp-controller="Home" asp-action="CreateSemester">
-                        <button class="btn text-dark pl-1 text-nowrap" type="submit" name="lastSemester" value="@lastSemester">Új félév felvétele</button>
-                    </form>
+                    <div class="input-group">
+                        <input type="text" name="anysearch" class="form-control" placeholder="Keresés" form="anysearchform">
+                        <div class="input-group-append">
+                            <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <span class="sr-only">Toggle Dropdown</span>
+                            </button>
+                            <div class="dropdown-menu w-100">
+                                <div class="p-3">EZ MÉG KÉRDÉSES</div>
+                                <div class="d-inline-block p-3">
+                                    <label>Tárgy: </label><input type="text" name="subject" class="form-control" placeholder="Tárgy" />
+                                </div>
+                                <div class="d-inline-block p-3">
+                                    <label>Oktató: </label><input type="text" name="teacher" class="form-control" placeholder="Oktató" />
+                                </div>
+                                <div class="d-inline-block p-3">
+                                    <label>Szak: </label><input type="text" name="programme" class="form-control" placeholder="Szak" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </li>
-            }
-            <li class="nav-item pt-1 pl-1">
-                <div class="custom-control custom-switch text-nowrap">
-                    <input type="checkbox" class="custom-control-input pl-1" id="tableView" onclick="changeTable()">
-                    <label class="custom-control-label text-dark" for="tableView">Táblázatos nézet</label>
-                </div>
-            </li>
-        </ul>
-        <ul class="nav nav-sidebar" id="closed">
-            <li class="nav-item pb-1">
-                <i class="fas fa-search"></i>
-            </li>
-            <li class="nav-item pb-1">
-                <i class="fas fa-list-ul"></i>
-            </li>
-            @if (User.IsInRole("Admin"))
-            {
+                <li class="nav-item pb-1 height">
+                    <a class="nav-link text-dark dropdown-toggle pl-1 py-0 d-inline" id="dropdownMenuSemester" data-toggle="dropdown">
+                        @date
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" role="menu">
+                        @foreach (var item in Model.SemestersList)
+                        {
+                            if (date != item.Date)
+                            {
+                                <a class="text-dark nav-link" role="menuitem" tabindex="-1" asp-route-currentSemesterId="@item.Id">@item.Date</a>
+                            }
+                        }
+                    </div>
+                </li>
+                @if (User.IsInRole("Admin"))
+                {
+                    <li class="nav-item pb-1 height">
+                        <form method="post" class="navbar-form d-flex" asp-controller="Home" asp-action="CreateSemester">
+                            <button class="btn text-dark pl-1 text-nowrap" type="submit" name="lastSemester" value="@lastSemester">Új félév felvétele</button>
+                        </form>
+                    </li>
+                }
+                <li class="nav-item pt-1 pl-1">
+                    <div class="custom-control custom-switch text-nowrap">
+                        <input type="checkbox" class="custom-control-input pl-1" id="tableView" onclick="changeTable()">
+                        <label class="custom-control-label text-dark" for="tableView">Táblázatos nézet</label>
+                    </div>
+                </li>
+            </ul>
+            <ul class="nav nav-sidebar" id="closed">
                 <li class="nav-item pb-1">
-                    <i class="fas fa-plus-square"></i>
+                    <i class="fas fa-search"></i>
                 </li>
-            }
-            <li class="nav-item pb-1">
-                <i class="fas fa-table"></i>
-            </li>
-        </ul>
-    </div>
+                <li class="nav-item pb-1">
+                    <i class="fas fa-list-ul"></i>
+                </li>
+                @if (User.IsInRole("Admin"))
+                {
+                    <li class="nav-item pb-1">
+                        <i class="fas fa-plus-square"></i>
+                    </li>
+                }
+                <li class="nav-item pb-1">
+                    <i class="fas fa-table"></i>
+                </li>
+            </ul>
+        </div>
 }
