--- a/Kurzusok/Kurzusok/Views/Home/_SubjectModalEditPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_SubjectModalEditPartial.cshtml
@@ -12,7 +12,10 @@
                     <button type="button" class="close" data-dismiss="modal"><span>X</span></button>
                 </div>
                 <div class="modal-body">
-
+                    <div id="errorAlert" class="alert alert-danger collapse">
+                        <button type="button" class="close" data-dismiss="alert"><span>X</span></button>
+                        <strong> Hiba! </strong> Rossz, vagy nem megfelelő adatokat akarsz megadni! Helyesen tölts ki minden kötelező mezőt!
+                    </div>
                     <div class="form-group">
                         <input type="hidden" asp-for="SubjectId" class="form-control" value="@Model.SubjectId" />
                         <input type="hidden" asp-for="SemesterId" class="form-control" value="@Model.SemesterId" />
