Update the database!!!!! Some random fixes here and there

--- a/Kurzusok/Kurzusok/wwwroot/css/sidebar.css
+++ b/Kurzusok/Kurzusok/wwwroot/css/sidebar.css
@@ -26,6 +26,9 @@
         height: 40px;
         line-height: 40px;
     }
+        #opened > .height > .dropdown-menu {
+            line-height: 20px;
+        }
 
 #closed {
     display: inline;
