--- a/Kurzusok/Kurzusok/Views/Home/Index.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/Index.cshtml
@@ -236,7 +236,9 @@
                                     @if (User.IsInRole("Admin"))
                                     {
                                         <td>
-                                            <button class="open_editCourse btn btn-default btn-xs" data-toggle="modal" data-target="#editCourse"><span class="far fa-edit" aria-hidden="true"></span></button>
+                                            <button class="btn btn-default btn-xs" data-toggle="subject-modal" data-target="#editCourse" id="editecourse" data-url="@Url.Action("EditCourse")" data-id="@course.CourseId">
+                                                <span class="far fa-edit" aria-hidden="true"></span>
+                                            </button>
                                             <a class="btn btn-danger" data-toggle="course-delete-modal" data-target="#applyCourseDelete" data-id="@course.CourseId" id="deletecourse"><span class="fas fa-trash-alt"></span></a>
                                         </td>
                                     }
@@ -313,7 +315,8 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" role="menu">
                                 <a class="btn btn-xs" data-toggle="subject-modal" data-target="#addCourse" data-url="@Url.Action("CreateCourse")" data-id="@item.SubjectId"><span class="far fa-plus-square pr-1"></span>Kurzus hozzáadás</a><br />
-                                <a class="open_editCourse btn btn-xs" data-toggle="modal" data-target="#editCourse"><span class="far fa-edit pr-1"></span>Tárgy szerkesztése</a> <br />
+
+                                <button class=" btn btn-xs" data-toggle="subject-modal" data-target="#editSubject" id="editesubject" data-url="@Url.Action("EditSubject")" data-id="@item.SubjectId"><span class="far fa-edit pr-1"></span>Tárgy szerkesztése</button> <br />
                                 <a class="btn btn-xs" data-toggle="subject-delete-modal" data-target="#applySubjectDelete" data-id="@item.SubjectId" id="deletesubject"><span class="far fa-trash-alt pr-1"></span>Tárgy törlése</a>
                             </div>
                         </td>
@@ -392,7 +395,9 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <td>
-                                <button class="open_editCourse btn btn-default btn-xs" data-toggle="modal" data-target="#editCourse"><span class="far fa-edit" aria-hidden="true"></span></button>
+                                <button class="btn btn-default btn-xs" data-toggle="subject-modal" data-target="#editCourse" id="editecourse" data-url="@Url.Action("EditCourse")" data-id="@course.CourseId">
+                                    <span class="far fa-edit" aria-hidden="true"></span>
+                                </button>
                                 <a class="btn btn-xs" data-toggle="course-delete-modal" data-target="#applyCourseDelete" data-id="@course.CourseId" id="deletecourse"><span class="fas fa-trash-alt"></span></a>
                             </td>
                         }
@@ -448,7 +453,9 @@
                         @if (User.IsInRole("Admin"))
                         {
                             <td>
-                                <button class="open_editCourse btn btn-default btn-xs" data-toggle="modal" data-target="#editCourse"><span class="far fa-edit" aria-hidden="true"></span></button>
+                                <button class="btn btn-default btn-xs" data-toggle="subject-modal" data-target="#editCourse" id="editecourse" data-url="@Url.Action("EditCourse")" data-id="@course.CourseId">
+                                    <span class="far fa-edit" aria-hidden="true"></span>
+                                </button>
                                 <a class="btn btn-xs" data-toggle="course-delete-modal" data-target="#applyCourseDelete" data-id="@course.CourseId" id="deletecourse"><span class="fas fa-trash-alt"></span></a>
                             </td>
                         }
@@ -462,75 +469,75 @@
 
 @section SideBar{
     <form asp-area="" asp-controller="Home" asp-action="AnySearch" id="anysearchform"> </form>
-        <div class="sidebar" id="SideBar" onmouseover="openBar()" onmouseout="delay()">
-            <ul class="nav nav-sidebar justify-content-center" id="opened">
-                <li class="nav-item pb-1 height">
-                    <div class="input-group">
-                        <input type="text" name="anysearch" class="form-control" placeholder="Keresés" form="anysearchform">
-                        <div class="input-group-append">
-                            <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="sr-only">Toggle Dropdown</span>
-                            </button>
-                            <div class="dropdown-menu w-100">
-                                <div class="p-3">EZ MÉG KÉRDÉSES</div>
-                                <div class="d-inline-block p-3">
-                                    <label>Tárgy: </label><input type="text" name="subject" class="form-control" placeholder="Tárgy" />
-                                </div>
-                                <div class="d-inline-block p-3">
-                                    <label>Oktató: </label><input type="text" name="teacher" class="form-control" placeholder="Oktató" />
-                                </div>
-                                <div class="d-inline-block p-3">
-                                    <label>Szak: </label><input type="text" name="programme" class="form-control" placeholder="Szak" />
-                                </div>
+    <div class="sidebar" id="SideBar" onmouseover="openBar()" onmouseout="delay()">
+        <ul class="nav nav-sidebar justify-content-center" id="opened">
+            <li class="nav-item pb-1 height">
+                <div class="input-group">
+                    <input type="text" name="anysearch" class="form-control" placeholder="Keresés" form="anysearchform">
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <div class="dropdown-menu w-100">
+                            <div class="p-3">EZ MÉG KÉRDÉSES</div>
+                            <div class="d-inline-block p-3">
+                                <label>Tárgy: </label><input type="text" name="subject" class="form-control" placeholder="Tárgy" />
+                            </div>
+                            <div class="d-inline-block p-3">
+                                <label>Oktató: </label><input type="text" name="teacher" class="form-control" placeholder="Oktató" />
+                            </div>
+                            <div class="d-inline-block p-3">
+                                <label>Szak: </label><input type="text" name="programme" class="form-control" placeholder="Szak" />
                             </div>
                         </div>
                     </div>
-                </li>
-                <li class="nav-item pb-1 height">
-                    <a class="nav-link text-dark dropdown-toggle pl-1 py-0 d-inline" id="dropdownMenuSemester" data-toggle="dropdown">
-                        @date
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" role="menu">
-                        @foreach (var item in Model.SemestersList)
+                </div>
+            </li>
+            <li class="nav-item pb-1 height">
+                <a class="nav-link text-dark dropdown-toggle pl-1 py-0 d-inline" id="dropdownMenuSemester" data-toggle="dropdown">
+                    @date
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" role="menu">
+                    @foreach (var item in Model.SemestersList)
+                    {
+                        if (date != item.Date)
                         {
-                            if (date != item.Date)
-                            {
-                                <a class="text-dark nav-link" role="menuitem" tabindex="-1" asp-route-currentSemesterId="@item.Id">@item.Date</a>
-                            }
+                            <a class="text-dark nav-link" role="menuitem" tabindex="-1" asp-route-currentSemesterId="@item.Id">@item.Date</a>
                         }
-                    </div>
+                    }
+                </div>
+            </li>
+            @if (User.IsInRole("Admin"))
+            {
+                <li class="nav-item pb-1 height">
+                    <form method="post" class="navbar-form d-flex" asp-controller="Home" asp-action="CreateSemester">
+                        <button class="btn text-dark pl-1 text-nowrap" type="submit" name="lastSemester" value="@lastSemester">Új félév felvétele</button>
+                    </form>
                 </li>
-                @if (User.IsInRole("Admin"))
-                {
-                    <li class="nav-item pb-1 height">
-                        <form method="post" class="navbar-form d-flex" asp-controller="Home" asp-action="CreateSemester">
-                            <button class="btn text-dark pl-1 text-nowrap" type="submit" name="lastSemester" value="@lastSemester">Új félév felvétele</button>
-                        </form>
-                    </li>
-                }
-                <li class="nav-item pt-1 pl-1">
-                    <div class="custom-control custom-switch text-nowrap">
-                        <input type="checkbox" class="custom-control-input pl-1" id="tableView" onclick="changeTable()">
-                        <label class="custom-control-label text-dark" for="tableView">Táblázatos nézet</label>
-                    </div>
-                </li>
-            </ul>
-            <ul class="nav nav-sidebar" id="closed">
+            }
+            <li class="nav-item pt-1 pl-1">
+                <div class="custom-control custom-switch text-nowrap">
+                    <input type="checkbox" class="custom-control-input pl-1" id="tableView" onclick="changeTable()">
+                    <label class="custom-control-label text-dark" for="tableView">Táblázatos nézet</label>
+                </div>
+            </li>
+        </ul>
+        <ul class="nav nav-sidebar" id="closed">
+            <li class="nav-item pb-1">
+                <i class="fas fa-search"></i>
+            </li>
+            <li class="nav-item pb-1">
+                <i class="fas fa-list-ul"></i>
+            </li>
+            @if (User.IsInRole("Admin"))
+            {
                 <li class="nav-item pb-1">
-                    <i class="fas fa-search"></i>
+                    <i class="fas fa-plus-square"></i>
                 </li>
-                <li class="nav-item pb-1">
-                    <i class="fas fa-list-ul"></i>
-                </li>
-                @if (User.IsInRole("Admin"))
-                {
-                    <li class="nav-item pb-1">
-                        <i class="fas fa-plus-square"></i>
-                    </li>
-                }
-                <li class="nav-item pb-1">
-                    <i class="fas fa-table"></i>
-                </li>
-            </ul>
-        </div>
+            }
+            <li class="nav-item pb-1">
+                <i class="fas fa-table"></i>
+            </li>
+        </ul>
+    </div>
 }
