--- a/Kurzusok/Kurzusok/Views/Home/_SubjectModalEditPartial.cshtml
+++ b/Kurzusok/Kurzusok/Views/Home/_SubjectModalEditPartial.cshtml
@@ -8,7 +8,7 @@
         <form asp-action="EditSubjectPost" onsubmit="return ajaxpostBasic(this);">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title" id="editSubjectLabel">Tárgy hozzáadása</h4>
+                    <h4 class="modal-title" id="editSubjectLabel">Tárgy szerkesztése</h4>
                     <button type="button" class="close" data-dismiss="modal"><span>X</span></button>
                 </div>
                 <div class="modal-body">
